versioned_docs/version-2026.1.4/turma/iiw_assis/iiw2024a-aa.mdx
---
slug: /turma/iiw2024a-aa
sidebar_label: IIW2024A-AA
---
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "IIW2024A-AA",
  "base": "IIW",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": []
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": []
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": [
        {
          "subject": "Atendimento ao Aluno",
          "size": 2,
          "teachers": [
            "Alex Soares de Brito"
          ],
          "classroom": "a_definir",
          "students": [
            "IIW2024A-AA"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": []
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": [
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Alex Soares de Brito"
          ],
          "classroom": "a_definir",
          "students": [
            "IIW2024A-AA"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 2,
          "teachers": [
            "Álvaro José de Almeida Araújo"
          ],
          "classroom": "a_definir",
          "students": [
            "IIW2024A-AA"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Alex Soares de Brito"
          ],
          "classroom": "a_definir",
          "students": [
            "IIW2024A-AA"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        }
      ]
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "17:35 - 19:00",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# IIW2024A-AA

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>
