versioned_docs/version-2026.1.8/turma/iiw_assis/iiw2024a-aa.mdx
---
slug: /turma/iiw2024a-aa
sidebar_label: IIW2024A-AA
---
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "IIW2024A-AA",
  "base": "IIW",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": [
        {
          "subject": "Atendimento ao Aluno",
          "size": 3,
          "teachers": [
            "Elizangela Mendes Pereira"
          ],
          "classroom": "a_definir",
          "students": [
            "IIW2024A-AA"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "José Provetti Júnior"
          ],
          "classroom": "a_definir",
          "students": [
            "IIW2024A-AA"
          ],
          "time": "16:45 - 17:35",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Everaldo Lorensetti"
          ],
          "classroom": "a_definir",
          "students": [
            "IIW2024A-AA"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Cosme Oliveira da Silva"
          ],
          "classroom": "a_definir",
          "students": [
            "IIW2024A-AA"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Everaldo Lorensetti"
          ],
          "classroom": "a_definir",
          "students": [
            "IIW2024A-AA"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Cosme Oliveira da Silva"
          ],
          "classroom": "a_definir",
          "students": [
            "IIW2024A-AA"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Everaldo Lorensetti"
          ],
          "classroom": "a_definir",
          "students": [
            "IIW2024A-AA"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "André Alexandre Valentini"
          ],
          "classroom": "a_definir",
          "students": [
            "IIW2024A-AA"
          ],
          "time": "15:55 - 16:45",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Everaldo Lorensetti"
          ],
          "classroom": "a_definir",
          "students": [
            "IIW2024A-AA"
          ],
          "time": "15:55 - 16:45",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Michelli Cristina Galli"
          ],
          "classroom": "a_definir",
          "students": [
            "IIW2024A-AA"
          ],
          "time": "16:45 - 17:35",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": [
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Vagner Simões Santos"
          ],
          "classroom": "",
          "students": [
            "IIW2024A-AA"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Orientação de Projeto Integrador",
          "size": 1,
          "teachers": [
            "Vagner Simões Santos"
          ],
          "classroom": "laboratorio_de_computacao_aplicada",
          "students": [
            "IIW2024A-AA"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Cosme Oliveira da Silva"
          ],
          "classroom": "a_definir",
          "students": [
            "IIW2024A-AA"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Leandro Luiz Borges"
          ],
          "classroom": "a_definir",
          "students": [
            "IIW2024A-AA"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Vagner Simões Santos"
          ],
          "classroom": "",
          "students": [
            "IIW2024A-AA"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Alex Soares de Brito"
          ],
          "classroom": "a_definir",
          "students": [
            "IIW2024A-AA"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Orientação de Projeto Integrador",
          "size": 1,
          "teachers": [
            "Vagner Simões Santos"
          ],
          "classroom": "laboratorio_de_computacao_aplicada",
          "students": [
            "IIW2024A-AA"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "José Provetti Júnior"
          ],
          "classroom": "a_definir",
          "students": [
            "IIW2024A-AA"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Alex Soares de Brito"
          ],
          "classroom": "a_definir",
          "students": [
            "IIW2024A-AA"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Leandro Luiz Borges"
          ],
          "classroom": "a_definir",
          "students": [
            "IIW2024A-AA"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Cosme Oliveira da Silva"
          ],
          "classroom": "a_definir",
          "students": [
            "IIW2024A-AA"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 2,
          "teachers": [
            "José Provetti Júnior"
          ],
          "classroom": "a_definir",
          "students": [
            "IIW2024A-AA"
          ],
          "time": "15:55 - 16:45",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": [
        {
          "subject": "Atendimento ao Aluno",
          "size": 3,
          "teachers": [
            "Leandro Luiz Borges"
          ],
          "classroom": "a_definir",
          "students": [
            "IIW2024A-AA"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "José Provetti Júnior"
          ],
          "classroom": "a_definir",
          "students": [
            "IIW2024A-AA"
          ],
          "time": "16:45 - 17:35",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": [
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Vagner Simões Santos"
          ],
          "classroom": "",
          "students": [
            "IIW2024A-AA"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Orientação de Projeto Integrador",
          "size": 1,
          "teachers": [
            "Vagner Simões Santos"
          ],
          "classroom": "laboratorio_de_informatica_b",
          "students": [
            "IIW2024A-AA"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Michelli Cristina Galli"
          ],
          "classroom": "a_definir",
          "students": [
            "IIW2024A-AA"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Vagner Simões Santos"
          ],
          "classroom": "",
          "students": [
            "IIW2024A-AA"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "André Alexandre Valentini"
          ],
          "classroom": "",
          "students": [
            "IIW2024A-AA"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Alex Soares de Brito"
          ],
          "classroom": "a_definir",
          "students": [
            "IIW2024A-AA"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Álvaro José de Almeida Araújo"
          ],
          "classroom": "a_definir",
          "students": [
            "IIW2024A-AA"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Orientação de Projeto Integrador",
          "size": 1,
          "teachers": [
            "Vagner Simões Santos"
          ],
          "classroom": "laboratorio_de_informatica_b",
          "students": [
            "IIW2024A-AA"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Álvaro José de Almeida Araújo"
          ],
          "classroom": "a_definir",
          "students": [
            "IIW2024A-AA"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Elizangela Mendes Pereira"
          ],
          "classroom": "a_definir",
          "students": [
            "IIW2024A-AA"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Alex Soares de Brito"
          ],
          "classroom": "a_definir",
          "students": [
            "IIW2024A-AA"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "André Alexandre Valentini"
          ],
          "classroom": "a_definir",
          "students": [
            "IIW2024A-AA"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Michelli Cristina Galli"
          ],
          "classroom": "a_definir",
          "students": [
            "IIW2024A-AA"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Elizangela Mendes Pereira"
          ],
          "classroom": "a_definir",
          "students": [
            "IIW2024A-AA"
          ],
          "time": "15:55 - 16:45",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Michelli Cristina Galli"
          ],
          "classroom": "a_definir",
          "students": [
            "IIW2024A-AA"
          ],
          "time": "15:55 - 16:45",
          "color": ""
        }
      ]
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "17:35 - 19:00",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# IIW2024A-AA

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>
